--- a/static/stylesheets/css/main.css
+++ b/static/stylesheets/css/main.css
@@ -234,18 +234,39 @@ button:enabled:disabled {
 
 /* profile.ejs */
 section.profile {
-  position: absolute;
-  display: flex;
-  flex-wrap: wrap;
+  margin-top: 3em;
+}
+section.profile h1 {
+  border-top: 0.1em solid white;
+  padding-top: 1em;
+  margin: 0;
+  padding-bottom: 0.5em;
+}
+section.profile ul {
   margin-top: 10em;
 }
-section.profile p {
-  flex-grow: 2;
+section.profile ul p:first-child {
+  display: none;
+}
+section.profile ul p {
+  margin-top: unset;
+  margin: 0em 1.5em;
+}
+section.profile ul p:nth-child(2) {
+  text-transform: uppercase;
+  font-family: Futura;
+  padding-top: 3em;
+}
+section.profile ul p:nth-child(5) {
+  background-color: rgba(255, 255, 255, 0.2);
+  padding: 1em;
+  margin-top: 1em;
+  border-radius: 0.2em;
 }
 
 img[alt=profilepic] {
   position: absolute;
-  top: 25vw;
+  top: 30vw;
   margin: 0 auto;
   margin-bottom: 2em;
   width: 40%;
@@ -301,12 +322,22 @@ form.editprofile textarea {
 .sportsList {
   padding: 1em;
 }
+.sportsList ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
 .sportsList li {
   justify-content: flex-start;
 }
 
-.filterSports form {
-  flex: none;
+.filterSports {
+  margin: 1.5em;
+}
+
+ul.match {
+  display: flex;
+  flex-wrap: wrap;
 }
 
 /* partials/nav.ejs */
@@ -314,18 +345,69 @@ nav {
   bottom: 0;
   position: fixed;
   width: 100%;
+  z-index: 10;
   font-family: Futura Light;
 }
 nav ul {
   display: flex;
   justify-content: space-evenly;
+  background-color: black;
 }
-nav li {
+nav ul li {
   padding: 1em;
   color: white;
+  letter-spacing: 0.2em;
 }
+
 nav a {
+  background-color: #000000;
+  color: #ffffff;
+}
+nav a:hover {
+  background-color: #000000;
+  border: 1px solid #ffffff;
+}
+nav a:active {
+  background-color: linear-gradient 0deg, #cb2f4f 0%, #c32a4b 100%;
+}
+nav a:focus {
+  background-color: #000000;
+  box-shadow: inset 0 0 1px #ffffff00;
+}
+nav a:disabled {
+  background-color: #000000;
+}
+
+footer {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  padding: 1em 0em;
+  background-color: transparent;
+}
+footer ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+footer a {
   color: white;
+  font-family: Futura Light;
+  letter-spacing: 0.1em;
+  padding: 0 1em;
+}
+
+/* chat.ejs */
+form[id=send-container] {
+  flex-wrap: unset;
+  margin-top: 2em;
+  position: fixed;
+  bottom: 0;
+}
+
+input[id=msg] {
+  margin: 0;
+  border-radius: unset;
 }
 
 .message {
@@ -338,9 +420,40 @@ nav a {
   margin: 0 auto;
 }
 
+p[id=user] {
+  font-family: Futura;
+  text-transform: uppercase;
+}
+
+p[id=room] {
+  margin: 0;
+}
+
+button[id=leave-btn] {
+  background-color: transparent;
+  padding: 1.5em 0em;
+  margin: 0;
+}
+
+button[id=send-btn] {
+  width: unset;
+  border-radius: unset;
+}
+
 /* sendMail.ejs */
 .sendMail form {
   margin: 1.5em;
+}
+
+.sendMail section {
+  margin: 1.5em;
+}
+.sendMail section input {
+  margin-bottom: 2em;
+}
+
+.sendMail h3 {
+  padding-top: 2em;
 }
 
 /*# sourceMappingURL=main.css.map */
