--- a/views/filterSports.ejs
+++ b/views/filterSports.ejs
@@ -4,7 +4,7 @@
     <main class="filterSports"></main>
     <section>
       <h1>Vind een match</h1>
-      <h3>geef je voorkeur op en zoek een match</h3>
+      <h3>geef je voorkeur op en vind een match</h3>
       <form action="/applyFilter" method="POST">
         <label for="sports">Welke sporten vind je leuk?</label>
         <fieldset>
@@ -47,7 +47,7 @@
           <label for="like">Like</label>
           <input type="radio" id="dislike" name="action" value="dislike">
           <label for="dislike">Dislike</label>
-          <button type="submit" value="Save">opslaan</button>
+          <input type="submit" value="opslaan"></input>
         </form>
       <%  } %>
     </ul>
