--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -2,7 +2,7 @@
 <%- include('partials/head') %>
 
 <body>
-    <a href="/"><button id="leave-btn">Leave Chat</button></a>
+    <a href="/"><button id="leave-btn"> < Ga terug</button></a>
     <p id="user"><%= name %></p>
     <p id="room"><%= room %></p>
     <div id="message-box"></div>
