--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -2,9 +2,9 @@
 <body>
         <nav>
             <ul>
-                <li><a href="/filter">matchen</a></li>
-                <li><a href="/profile/:profileId">profiel</a></li>
-                <li><a href="/chat">chats</a></li>
+                <li><a href="/filter">Matchen</a></li>
+                <li><a href="/profile/:profileId">Profiel</a></li>
+                <li><a href="/chat">Chats</a></li>
             </ul>
         </nav>
 </body>
